# rust-music-theory

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
docs/: chord-symbols.md
examples/: hypnotic_techno.rs  vengeance_waltz.rs
src/: chord.rs  interval.rs  lib.rs  main.rs  midi.rs  note.rs  scale.rs
src/chord/: chord.rs  chord_type.rs  errors.rs  mod.rs  number.rs  parser.rs  quality.rs  spec.rs
src/interval/: errors.rs  interval.rs  mod.rs
src/note/: accidental.rs  errors.rs  key_signature.rs  mod.rs  note.rs  pitch.rs  pitch_class.rs  pitch_symbol.rs
src/scale/: errors.rs  mod.rs  mode.rs  scale.rs  scale_type.rs
src/wasm/: chords.rs  mod.rs  parsers.rs  scales.rs  types.rs  utils.rs
tests/: midi_integration.rs  test_chord.rs  test_chord_number.rs  test_scale.rs  tests.rs
tests/chord/: test_chord.rs  test_enharmonics.rs  test_lead_sheet.rs  test_lead_sheet_audit.rs  test_lead_sheet_second_audit.rs  test_lead_sheet_third_audit.rs  test_number.rs  test_quality.rs  test_regex.rs
tests/cli/: test_cli.rs
tests/errors/: test_errors.rs
tests/interval/: test_interval.rs
tests/note/: test_key_signature.rs  test_note.rs  test_notes_trait.rs  test_pitch.rs  test_pitch_class.rs  test_pitch_symbol.rs
tests/scale/: test_additional_scales.rs  test_exotic_scales.rs  test_minor_modes.rs  test_regex.rs  test_scale.rs
tests/theory/: test_reference_theory.rs
www/: README.md  app.js  index.html  style.css
