[package]
name = "rust-music-theory"
description = "A library that procedurally implements music theory notions like Scale, Chord, Interval, Note"
license = "MIT"
version = "0.4.0"
readme = "README.md"
repository = "https://github.com/ozankasikci/rust-music-theory"
authors = ["Ozan Kaşıkçı <ozan@kasikci.io>"]
edition = "2018"
exclude = ["/.travis.yml", ".gitignore"]
keywords = ["music", "music-theory"]

[features]
default = []
midi = ["dep:midly"]
midi-playback = ["midi", "dep:midir"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "hypnotic_techno"
required-features = ["midi-playback"]

[[example]]
name = "midi_cc_demo"
required-features = ["midi-playback"]

[[example]]
name = "nocturne"
required-features = ["midi-playback"]

[[example]]
name = "nocturne_duo"
required-features = ["midi-playback"]

[[example]]
name = "simple_midi_test"
required-features = ["midi-playback"]

[[example]]
name = "synth_chords"
required-features = ["midi-playback"]

[[example]]
name = "techno_bass"
required-features = ["midi-playback"]

[dependencies]
strum = "0.17.1"
strum_macros = "0.17.1"
regex = "1"
clap = "2.31"
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
midly = { version = "0.5", optional = true }
midir = { version = "0.9", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
